src/libguides/az_database/search_bar.css
/* Desktop search bar */
#s-lg-az-filter-cols,
#s-lg-az-filter-cols > .col-md-2 > .d-flex {
  gap: 12px;
}

#s-lg-az-filter-cols > .col-md-10,
#s-lg-az-filter-cols > .col-md-10 > .row {
  display: contents;
}

#col-search {
  flex-basis: 100%;
  padding: 0 !important;
}

#col-search > div {
  flex-grow: 1;
}

.col-subjects,
.col-types {
  padding: 0 !important;
}

#s-lg-az-filter-cols .select2-container--bootstrap5 {
  flex: 1;
}

#s-lg-az-filter-cols > .col-md-2 {
  width: auto;
  padding: 0;
  align-items: flex-start !important;
  flex-grow: unset !important;
}

#s-lg-az-filter-cols button {
  padding-top: 0.25rem;
  padding-bottom: 0.25rem;
}

button.s-lg-az-reset {
  display: block !important;
  background-color: var(--bs-gray-200);
  color: var(--bs-red);
  border: 2px solid var(--bs-red);
  margin-left: 1rem;
}

button.s-lg-az-reset:hover {
  background-color: var(--bs-chili);
  color: var(--bs-white);
}

/* Mobile search bar */
#az-public-mobile-filters-default {
  display: flex;
  flex-direction: column;
}

#az-public-mobile-filters-default > div.form-group {
  order: 1;
}

#az-public-mobile-filters-default > div.d-flex.align-items-center {
  order: 2;
}

#az-public-mobile-filters-group-default {
  margin-top: 12px;
}

#az-public-mobile-filters-collapse-default {
  display: block;
}

#az-public-mobile-filters-default a.collapsible.az-toggle {
  display: none;
}

#az-public-mobile-filters-default .btn.btn-primary {
  padding-top: 0.25rem;
  padding-bottom: 0.25rem;
  width: 50%;
}

/* Mobile modal */
#az-public-mobile-filters-modal {
  margin-top: 1rem;
  display: flex;
  flex-direction: column;
}

#az-public-mobile-filters-modal > div.form-group {
  order: 1;
}

#az-public-mobile-filters-modal > div.d-flex.align-items-center {
  order: 2;
}

.az-public-mobile-filters .select2-container--bootstrap5,
.az-public-mobile-filters input {
  margin-bottom: 0.75rem;
  width: 100% !important;
}

/* Hide the default SpringShare icons */
#col-search img,
.col-subjects img,
.col-types img,
.col-subjects .fa-angle-down,
.col-types .fa-angle-down,
#az-public-mobile-filters-default .btn.btn-primary img,
#az-public-mobile-filters-modal .btn.btn-primary img {
  display: none;
}

/* select choices */
#s-lib-public-main-searchbar .select2-container .select2-selection--multiple {
  display: flex;
  padding: 0.35rem 0.75rem;
  min-height: 38px;
  background-color: var(--bs-white);
  border: 1px solid var(--bs-border-color);
  border-radius: var(--bs-border-radius);

  /* select arrow */
  &::after {
    font-family: var(--font-family-symbols);
    content: "keyboard_arrow_down"; 
    font-weight: normal;
    font-style: normal;
    font-size: var(--font-size-symbols);
    display: inline-block;
    margin-left: auto;
  }

  .select2-selection__rendered {
    display: inline-flex;
    flex-wrap: wrap;
    gap: 6px;
    margin-bottom: 0;
  }
}

#s-lg-az-result-count .az-filter-chip,
#s-lib-public-main-searchbar .select2-selection__choice {
  display: inline-flex;
  align-items: center;
  background-color: var(--bs-gray-200);
  color: var(--bs-black);
  font-size: var(--bs-badge-font-size);
  font-weight: 700;
  border-radius: var(--bs-border-radius);
  padding: 0.25rem 0 0.25rem 0.5rem;

  .d-lg-none img {
    opacity: 50%;
  }
}

#s-lib-public-main-searchbar .select2-selection__choice__remove {
  background-color: var(--bs-gray-200);
  border: 0;
  border-radius: var(--bs-border-radius);
  outline: 0;
  margin: 0;
  padding: 0;
  width: 24px;
  order: 1;

  span {
    font-size: 1.5rem;
    line-height: 0.75rem;
    vertical-align: middle;
    opacity: 50%;
  }
}

#s-lib-public-main-searchbar
  .select2-container--bootstrap5
  .select2-search.select2-search--inline {
  display: inline-flex;
  align-self: center;
}

#s-lib-public-main-searchbar
  .select2-container--bootstrap5
  .select2-search.select2-search--inline
  .select2-search__field {
  background-color: transparent;
  border: 0;
  box-shadow: none;
  outline: 0;
  margin: 0;
  padding: 0;
  resize: none;
  height: 24px;
}

/* Select dropdown */
/* Gets appended to very end of page DOM when you click on a filter dropdown. */
.select2-container--bootstrap5 .select2-dropdown {
  border: 0;
  box-shadow: var(--bs-box-shadow);
}

.select2-container--bootstrap5 .select2-dropdown .select2-results__options {
  max-height: 250px;
  overflow-y: auto;
}
.select2-container--bootstrap5 .select2-dropdown .select2-results__option {
  color: var(--bs-gray-700);
  padding: 0.75rem 1.25rem;
  margin: 0 0;
  display: flex;
  align-items: center;
}

.select2-container--bootstrap5
  .select2-dropdown
  .select2-results__option.select2-results__option--highlighted {
  background-color: #f4f6fa;
  color: var(--bs-river);
}

.select2-container--bootstrap5
  .select2-dropdown
  .select2-results__option.select2-results__option--selected {
  background-color: #f4f6fa;
  color: var(--bs-river);
  position: relative;
}

.select2-container--bootstrap5
  .select2-dropdown
  .select2-results__option.select2-results__option--selected:after {
  font-family: var(--font-family-symbols);
  content: "check"; 
  font-weight: normal;
  font-style: normal;
  font-size: var(--font-size-symbols);
  display: inline-block;
  margin-left: auto;
}

.modal-open .select2-container--bootstrap5 .select2-dropdown {
  z-index: 1056;
}

/* search result */
#s-lg-az-result-count span.d-lg-inline {
  display: block !important;
}

#s-lg-az-result-count .az-filter-chip a {
  display: block !important;
  height: 24px;
  width: 24px;
}

#az-mobile-filter-edit {
  font-size: var(--bs-body-font-size);
  margin-left: 1rem;
}

